--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/vendor/soundmanager2-jsmin.js"></script>
     <script src="js/app.js"></script>
 
     <link rel="stylesheet" href="css/app.css">
