--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Daymoon (2013) by Damon Zucconi">
     <meta name="viewport" content="width=device-width">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+    <script src="js/vendor/zepto-min.js"></script>
     <script src="js/vendor/soundmanager2-jsmin.js"></script>
     <script src="js/app.js"></script>
 
