Account for loading of sound

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Daymoon</title>
   </head>
-  <body>
+  <body class="loading">
     <img src="img/moon.jpg" width="600" height="600" id="moon" />
   </body>
 </html>
