--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="js/vendor/zepto-min.js"></script>
     <script src="js/vendor/soundmanager2-jsmin.js"></script>
+    <script src="js/vendor/imagesloaded.js"></script>
     <script src="js/app.js"></script>
 
     <link rel="stylesheet" href="css/app.css">
