--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
   </head>
   <body class="loading">
     <img src="img/moon.jpg" width="600" height="600" id="moon" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-5681004-15', '1e15dac6e61837fcfdd190a7148fc0b5958683f7.com');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
